--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.1",
+    "@next/eslint-plugin-next": "^12.0.7",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
     "typescript": "4.5.4"
   }
 }
