feat: add main page that shows current day menus

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,18 @@
 {
-  "cSpell.words": ["Lounaslistat", "maanantai", "viikko"]
+  "cSpell.words": [
+    "datetime",
+    "huoltamo",
+    "isopaja",
+    "keskiviikko",
+    "Lauantai",
+    "Lounaslistat",
+    "maanantai",
+    "Paja",
+    "perjantai",
+    "rehype",
+    "Sunnuntai",
+    "tiistai",
+    "torstai",
+    "viikko"
+  ]
 }
