--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "next": "12.0.7",
+    "@playwright/test": "^1.20.2",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.3",
+    "next": "12.1.4",
+    "node-fetch": "^3.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^8.0.2",
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.1",
