--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns-tz": "^1.3.3",
     "next": "12.1.4",
     "node-fetch": "^3.1.0",
+    "playwright-chromium": "^1.20.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.2",
