--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@playwright/test": "^1.20.2",
+    "chrome-aws-lambda": "^10.1.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.3",
     "next": "12.1.4",
     "node-fetch": "^3.1.0",
-    "playwright-chromium": "^1.20.2",
+    "playwright-core": "^1.20.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.2",
