--- a/.github/workflows/revalidate-current-day-menus-cron.yml
+++ b/.github/workflows/revalidate-current-day-menus-cron.yml
@@ -1,4 +1,5 @@
 name: Cron job to update root page
+
 on:
   schedule:
     # GitHub runs cron jobs on UTC time. We want to this job to run everyday
@@ -11,7 +12,9 @@ jobs:
   revalidate_root:
     name: Revalidate root page
     runs-on: ubuntu-latest
-    uses: fjogeleit/http-request-action@v1
-    with:
-      url: 'https://yle-campus-lunch-list.vercel.app/api/revalidate/current-day-menus?secret=${{ secrets.NEXT_APP_REVALIDATION_TOKEN }}'
-      method: 'GET'
+    steps:
+      - name: Call next app's revalidate url 📡
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://yle-campus-lunch-list.vercel.app/api/revalidate/current-day-menus?secret=${{ secrets.NEXT_APP_REVALIDATION_TOKEN }}'
+          method: 'GET'
