--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.1",
     "@next/eslint-plugin-next": "^12.0.7",
+    "@playwright/test": "^1.21.0",
     "@types/node": "17.0.0",
     "@types/react": "17.0.37",
     "eslint": "8.5.0",
