--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "2.1.1",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.3",
     "next": "12.1.4",
