--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "chrome-aws-lambda": "2.1.1",
+    "cheerio": "^1.0.0-rc.10",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.3",
     "next": "12.1.4",
-    "playwright-core": "^1.20.2",
+    "node-fetch": "^3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^8.0.2",
