--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.3",
     "next": "12.1.4",
+    "next-pwa": "^5.5.0",
     "node-fetch": "^3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
