--- a/.github/workflows/revalidate-current-day-menus-cron.yml
+++ b/.github/workflows/revalidate-current-day-menus-cron.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Call next app's revalidate url 📡
-        uses: satak/webrequest-action@master
+        uses: fjogeleit/http-request-action@v1
         with:
           url: https://yle-campus-lunch-list.vercel.app/api/revalidate/current-day-menus?secret=${{ secrets.NEXT_APP_REVALIDATION_TOKEN }}
           method: GET
