chore(package.json): add `license` field

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "yle-campus-lunch-list",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
