--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.10",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.3",
+    "jotai": "^1.8.6",
     "next": "12.1.4",
     "next-pwa": "^5.5.4",
     "node-fetch": "^3.2.3",
