feat: add "Visio Pasila" to lunch menu lists

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,14 @@
     "Luft",
     "maanantai",
     "Paja",
+    "Pasila",
+    "Pasilan",
     "perjantai",
     "rehype",
     "Sunnuntai",
     "tiistai",
     "torstai",
-    "viikko"
+    "viikko",
+    "Visio"
   ]
 }
