chore: update cSpell plugin known words list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,13 @@
     "Luft",
     "maanantai",
     "Paja",
+    "Palmia",
     "Pasila",
     "Pasilan",
     "perjantai",
+    "Ravintola",
     "rehype",
+    "saras",
     "Sunnuntai",
     "tiistai",
     "torstai",
